--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f0f0f0;
+  background-color: #151515;
 }
 
 
